@@ -11,8 +11,10 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.client.RestTemplate;
 import org.springframework.stereotype.Service;
 
+
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class GroupCourseService {
@@ -23,15 +25,20 @@ public class GroupCourseService {
     private final String URL = "http://localhost:8888/SERVICE-GROUPEC";
 
     public List<GroupCourseResponse> findAll() {
+
         List<GroupCourse> groups = groupcRepository.findAll();
-        ResponseEntity<Student[]> response = restTemplate.getForEntity(this.URL + "/api/student", Student[].class);
-        Student[] students = response.getBody();
-        return groups.stream().map((GroupCourse groupc) -> mapToGroupeCResponse (groupc, students)).toList();
+        //List<Student> student = Arrays.asList(restTemplate.getForObject(this.URL + "/api/student", Student[].class));
+        //return student.stream().map(car -> mapToGroupeCResponse(car, clients)).collect(Collectors.toList());
+        //ResponseEntity<Student> response = Arrays.asList(restTemplate.getForEntity(this.URL + "/api/student", Student[].class));
+        //Student[] students = response.getBody();
+        List<Student> student = Arrays.asList(restTemplate.getForObject(this.URL + "/api/student", Student[].class));
+        return groups.stream().map((GroupCourse groupc) -> mapToGroupeCResponse (groupc, student)).toList();
+        //return groups.stream().map(groupc -> mapToGroupeCResponse(groupc, student).collect(Collectors.toList()));
     }
 
 
-    private GroupCourseResponse mapToGroupeCResponse(GroupCourse groupC, Student[] students) {
-        Student foundStudent = Arrays.stream(students)
+    private GroupCourseResponse mapToGroupeCResponse(GroupCourse groupC, List<Student> students) {
+        Student foundStudent = students.stream()
                 .filter(studentt -> studentt.getId().equals(groupC.getId()))
                 .findFirst()
                 .orElse(null);
@@ -39,8 +46,10 @@ public class GroupCourseService {
         return GroupCourseResponse.builder()
                 .id(groupC.getId())
                 .name(groupC.getName())
-
+                .student(foundStudent)
                 .build();
+
+
     }
 
     public GroupCourseResponse findById(Long id) throws Exception {
